--- a/experiments/ignition/ignition_cnn_center.yml
+++ b/experiments/ignition/ignition_cnn_center.yml
@@ -2,34 +2,35 @@
 train:
   accelerator: "gpu" #str e.g. "gpu"
   devices: -1
-  strategy: "ddp_sharded" #str
+  # strategy: "ddp_sharded" #string
   # num_nodes: #int
-  # precision: #str
+  precision: 16 #str
   # auto_scale_batch_size: #bool
   enable_checkpointing: True #bool
   check_val_every_n_epoch: 1 #int
   # default_root_dir: #str
   logger: True #bool
   enable_progress_bar: False #bool
-  max_epochs: 1000 #int
+  max_epochs: 5000 #int
 
 #Model building arguments
 model:
+  model_type: original_model
   conv_type: "standard" #str "standard" or "quadrature"
   point_dim: 2 #int
   latent_dim: 10 #int
-  point_seq: [50, 25, 15, 10, 5] #list
-  channel_seq: [1, 2, 4, 8, 16] #list
+  point_seq: [50, 25, 10, 5] #list
+  channel_seq: [1, 8, 16, 32] #list
   learning_rate: 0.01
 
 #Data loader arguments
 data:
   # data_dir: #str
   dimension: 2 #int
-  batch_size: 512 #int
+  batch_size: 128 #int
   size: 50 #int
-  stride: 25 #int
-  flatten: False #bool, flatten for quadrature
+  stride: 50 #int
+  flatten: False
   channels: [1] #list
   shuffle: False
 
