--- a/experiments/tests/test_skip_cnn.yaml
+++ b/experiments/tests/test_skip_cnn.yaml
@@ -24,16 +24,13 @@ train:
 #Model arguments
 model:
   module: "skip" #str, encoder and decoder
-  conv_type: "quadrature" #str "standard" or "quadrature"
+  conv_type: "standard" #str "standard" or "quadrature"
   spatial_dim: 2 #int
   latent_dim: 10 #int
   point_seq: [2500, 900, 576, 100] #list
   channel_seq: [1, 2, 3, 4] #list
-  filter_seq: [4, 4] #list
   optimizer: "Adam" #str
-  learning_rate: 0.01 #float
-  use_bias: True
-  quad_mode: "implicit"
+  learning_rate: 0.01 #lfoat
   loss_fn: "SobolevLoss"
 
 #PT LightningDataModule arguments
@@ -42,7 +39,7 @@ data:
   spatial_dim: 2 #int
   batch_size: 16 #int
   size: 50 #int
-  flatten: True #bool, flatten for quadrature
+  flatten: False #bool, flatten for quadrature
   channels: [1] #list
 
 #Extra arguments
