--- a/experiments/ignition/ignition_maxskip_qcnn.yml
+++ b/experiments/ignition/ignition_maxskip_qcnn.yml
@@ -10,8 +10,8 @@ train:
   enable_checkpointing: True #bool
   check_val_every_n_epoch: 1 #int
   default_root_dir: "./lightning_logs" #str  logger: True #bool
-  enable_progress_bar: True #bool
-  max_epochs: 5000 #int
+  enable_progress_bar: False #bool
+  max_epochs: 50000 #int
 
 #Model building arguments
 model:
@@ -27,8 +27,8 @@ model:
   conv_type: "quadrature" #str "standard" or "quadrature"
 
   conv_params:
-    num_points_in: [2500, 2500, 625]
-    num_points_out: [2500, 2500, 625]
+    num_points_in: [2500, 2500]
+    num_points_out: [2500, 2500]
     filter_seq: [[16,16,16]]
     in_channels: [1, 16, 16] #list of length == stages+1 
     out_channels: [16, 16, 16] #list of length == stages+1 or length == 1
@@ -48,7 +48,7 @@ data:
   num_workers: 2
 
 #Extra arguments
-extra:
-  make_gif: True #bool
+misc:
+  make_gif: False #bool
   early_stopping: False #bool
   compute_stats: False #bool
