--- a/experiments/ignition/qcnn_unstructured_center.yaml
+++ b/experiments/ignition/qcnn_unstructured_center.yaml
@@ -38,7 +38,7 @@ model:
 #PT LightningDataModule arguments
 data:
   module: "unstructured_data"
-  # data_dir: "data/ignition_center_cut" #str
+  data_dir: "data/unstructured_ignition_center_cut" #str
   spatial_dim: 2 #int
   batch_size: 64 #int
   num_points: 2500 #int
